Fix alignment and styles

--- a/assets/scss/molecules/_ind-description-list.scss
+++ b/assets/scss/molecules/_ind-description-list.scss
@@ -8,28 +8,17 @@
 
   &__item {
     padding: 15px;
-    width: 47%;
-    float: left;
+    width: 100%;
     position: relative;
     display: inline-block;
-    margin: 10px 17px;
-    border: 1px solid $tile-border-colour;
+    margin: 8px 0px;
+    border: 1px solid #D8D8D8;
     overflow: hidden;
     color: $text-colour;
 
     &:hover {
       background-color: $toc-colour;
       border: 1px solid $link-colour;
-    }
-
-    @media (max-width: $screen-sm-max) {
-      width: 45%;
-      margin: 8px 6px;
-    }
-
-    @media (max-width: $screen-xs-max) {
-      width: 48%;
-      margin: 8px 6px;
     }
   }
 
