--- a/assets/scss/molecules/_main-content.scss
+++ b/assets/scss/molecules/_main-content.scss
@@ -2,7 +2,7 @@
 
 .dit-main-content {
   &__body {
-    padding-left: 0;
+    //
   }
 
   h2 {
