--- a/assets/scss/molecules/_toc.scss
+++ b/assets/scss/molecules/_toc.scss
@@ -5,10 +5,6 @@
   background: $toc-colour;
   color: $text-colour;
 
-  .container {
-    padding-left: 0;
-  }
-
   &__heading {
     margin-bottom: 16px;
   }
